tests/ui/invalid-self-argument/bare-fn.stderr
error: unexpected `self` parameter in function
  --> $DIR/bare-fn.rs:1:16
   |
LL | fn b(foo: u32, &mut self) { }
   |                ^^^^^^^^^ must be the first parameter of an associated function

error: aborting due to 1 previous error

